[gd_scene format=3 uid="uid://utnwc3mvxodu"]

[ext_resource type="PackedScene" uid="uid://cp5ljwrhxtnir" path="res://scenes/items/PotionModel.tscn" id="1_nq2bp"]
[ext_resource type="Script" uid="uid://d3ujs8125ule" path="res://scripts/items/pickupable_behaviour.gd" id="1_pickup"]
[ext_resource type="Script" uid="uid://gq8jkdjg8anv" path="res://scripts/items/throwable_behaviour.gd" id="2_throw"]
[ext_resource type="Script" uid="uid://6ngjp570ak3h" path="res://scripts/items/spawnable_behaviour.gd" id="3_spawnable"]
[ext_resource type="Script" uid="uid://cjqf3ba7ehoaf" path="res://scripts/items/weapon_behaviour.gd" id="4_weapon"]
[ext_resource type="PackedScene" path="res://scenes/effects/SpawnSurfaceEffect.tscn" id="5_effect"]
[ext_resource type="PackedScene" path="res://scenes/effects/audio/PlaySoundOnDestroyEffect.tscn" id="6_audio_destroy"]
[ext_resource type="PackedScene" path="res://scenes/effects/audio/PlaySoundOnThrowLandedEffect.tscn" id="6_uyudk"]
[ext_resource type="AudioStream" uid="uid://cy6reeja7npy3" path="res://resources/sounds/glass-breaking-386153.mp3" id="7_glass_sound"]
[ext_resource type="AudioStream" uid="uid://badopug7wkfnx" path="res://resources/sounds/brick-hit-2.mp3" id="7_nq2bp"]

[sub_resource type="SphereShape3D" id="SphereShape3D_flask"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_pickup_area"]
radius = 0.45

[node name="OilFlask" type="RigidBody3D" unique_id=1188964105]
collision_layer = 20
collision_mask = 29
contact_monitor = true
max_contacts_reported = 4

[node name="potion2" parent="." unique_id=1723275874 instance=ExtResource("1_nq2bp")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.22949016, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=538092638]
shape = SubResource("SphereShape3D_flask")

[node name="PickupableBehaviour" type="Area3D" parent="." unique_id=2081393947]
collision_layer = 0
script = ExtResource("1_pickup")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PickupableBehaviour" unique_id=721394993]
shape = SubResource("SphereShape3D_pickup_area")

[node name="ThrowableBehaviour" type="Node" parent="." unique_id=1167357374]
script = ExtResource("2_throw")
throw_force = 8.0
throw_up_bias = 0.3
throw_durability_cost = 1.0

[node name="SpawnableBehaviour" type="Node" parent="." unique_id=2143683177]
script = ExtResource("3_spawnable")
categories = Array[int]([0, 13, 24])

[node name="WeaponBehaviour" type="Node" parent="." unique_id=700160891]
script = ExtResource("4_weapon")
max_durability = 1
damage = 5.0

[node name="SpawnSurfaceEffect" parent="." unique_id=351748846 instance=ExtResource("5_effect")]

[node name="AudioEffects" type="Node" parent="." unique_id=1179257583]

[node name="PlaySoundOnThrowLandedEffect" parent="AudioEffects" unique_id=626122198 instance=ExtResource("6_uyudk")]
sound = ExtResource("7_nq2bp")

[node name="PlaySoundOnDestroyEffect" parent="AudioEffects" unique_id=713449680 instance=ExtResource("6_audio_destroy")]
sound = ExtResource("7_glass_sound")
